Initial support to keep filename history (file_info - FileBot Pattern)

--- a/src/UI/Settings/MediaManagement/Naming/NamingViewTemplate.hbs
+++ b/src/UI/Settings/MediaManagement/Naming/NamingViewTemplate.hbs
@@ -24,6 +24,29 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <label class="col-sm-3 control-label">Keep File Name History</label>
+
+        <div class="col-sm-8">
+            <div class="input-group">
+                <label class="checkbox toggle well">
+                    <input type="checkbox" name="keepFileNameHistory" class="x-keep-file-name-history"/>
+
+                    <p>
+                        <span>Yes</span>
+                        <span>No</span>
+                    </p>
+
+                    <div class="btn btn-primary slide-button"/>
+                </label>
+
+                <span class="help-inline-checkbox">
+                <i class="icon-radarr-form-info" title="Will keep the original name using FileBot pattern (file_info). Useful for subtitle downloaders like Sub-Zero Plex Plugin"/>
+            </span>
+            </div>
+        </div>
+    </div>
+
     <div class="x-naming-options">
         <div class="basic-setting x-basic-naming"></div>
 
